--- a/Desktop/WLD/package.json
+++ b/Desktop/WLD/package.json
@@ -1,14 +1,19 @@
 {
   "name": "wld",
   "version": "1.0.0",
-  "main": "script.js",
+  "main": "server.js",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "Panel de administración para Worldcoin Cúcuta",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
